# scimma-aws-utils

./: LICENSE  Makefile  README.md  setup.cfg
scimma_aws_utils/: auth.py  awscreds.py  cmd_login.py  cmd_setup.py  configs.py  credentials.py  main.py
test/: test_parse_idp_form.py
test/fixtures/: uiuc_login_response.html
