[metadata]
name = scimma-aws-utils
version = 1.1.2
description = Tools for interacting with AWS as a SCIMMA developer
url = https://github.com/scimma/scimma-aws-utils
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
author = Spencer Nelson
author_email = swnelson@uw.edu
license = MIT

[options]
install_requires =
    click
    boto3>=1.12
    bs4
    requests
    lxml
    colorama
    humanize

packages =
         scimma_aws_utils

[options.extras_require]
dev =
    flake8
    isort
    autopep8
    twine
    setuptools

[options.entry_points]
console_scripts =
    scimma-aws = scimma_aws_utils.main:main
